# song-project

./: .env  Cargo.toml  hello.md  jwt.http  readme.md  ref.md  sqlx.http  todos.http
migrations/: 20220310062022_body.sql  20220318065432_body.sql  20220405222332_card.sql  20220406000537_card.sql
src/: cors.rs  jwt.rs  lib.rs  main.rs  model.rs  router.rs  todo.rs
src/hello/: first.rs
src/mydata/: handler.rs
