[package]
name = "song-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version="0.4", features = ["headers"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.2.0", features = ["add-extension", "trace","cors"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# sqlx = { version = "0.5.10", features = ["runtime-tokio-rustls", "any", "postgres"] }
sqlx={version="0.5.10", features=[
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
]}

dotenv="0.15.0"
chrono={version="0.4.19",features=["serde"]}
# Typed HTTP headers.
headers = "0.3"
# jwt
jsonwebtoken = "8.0"
# 
once_cell = "1.8.0"
anyhow = "1.0.0"
#sql builder
sqlb="0.0.7"

# insert data to database
[[bin]]
name="export"
# use sqlb to insert data
[[bin]]
name="try_sqlb"
